# monadic-frp

./: Main.hs  Memo.hs  PaperExample.hs  README.md  SDLSFRP.hs  SFRP.cabal  TabbedBoxes.hs  YampaPaperExample.hs  YampaSDL.hs  makedocs
Control/: MonadicFRP.hs  MonadicFRP.hs~  SFRP.hs
extensible/: Boxes.hs  DynLet.hs  HEnv.hs  HMap.hs  Main.hs  PaperExample.hs  Reactive.hs  ReactiveHEnv.hs  SDLSFRP.hs  Signal.hs
talk/: maak  talk.tex  talkdone.tex
